--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -341,7 +341,7 @@
                         <p><i>Jonathon Moore (Lead In-Person Lansing Mentor)</i></p>
                     </div>
                     <div class="col-md-4" align="middle"> <!-- Ryan -->
-                        <img class="shadow-lg" src="assets/img/photos/" width=70%>
+                        <img class="shadow-lg" src="assets/img/photos/ryan750x1000r72.png" width=70%>
                         <br><br>
                         <p><i>Ryan Spencer (Lead All Michigan White Cohort Mentor)</i></p>
                     </div>
@@ -350,7 +350,7 @@
                     <div class="col-md-4" align="left"> <!-- Trinity -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a second-year student majoring in Computer Engineering and minoring in Japanese!
+                            I'm a third-year student majoring in Computer Engineering and minoring in Japanese!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
@@ -372,7 +372,7 @@
                     <div class="col-md-4" align="left"> <!-- Jonathon -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a fourth-year student majoring in Computer Science and minoring in Game Design!
+                            I'm a fifth-year student majoring in Computer Science and minoring in Game Design!
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
@@ -394,23 +394,23 @@
                     <div class="col-md-4" align="left"> <!-- Ryan -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a third-year student double-majoring in Computer Science and Criminal Justice!
+                            I'm a fifth-year in Applied Engineering, with a concentration in Suppy Chain Management
                         </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            Through a <a href="https://scratch.mit.edu/">Scratch</a> demo in my 8th grade science class.
+                            I've been around it my last 4 years and have seen how amazing it can be—and how everyone who does it seems to love it.
                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I've used code to create artwork without ever getting out a pencil!
+                            My team and I used MATLAB to program a robot to navigate through an obstacle course in one of my first engineering courses.
                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I am in the process of building my own compiler and interpreter (takes code from one language and translates it into another)!
+                            I plan on writing code that can help make the process of building infrastructure be safer and more sustainable.
                         </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            I have yet to find a passion that cannot be combined with coding; I've seen people be computer scientists in careers like fashion, art, running, and even race cars!
+                            Don't give up!
                         </p>
                     </div>
                 </div><br>
@@ -418,12 +418,12 @@
                     <div class="col-md-4" align="middle"> <!-- Judy -->
                         <img class="shadow-lg" src="assets/img/photos/IMG_6326.JPG" width=70%>
                         <br><br>
-                        <p><i>Judy Effendi (Virtual Lead Administrative Mentor)</i></p>
+                        <p><i>Judy Effendi (Virtual All Michigan Lead Administrative Mentor)</i></p>
                     </div>
                     <div class="col-md-4" align="middle"> <!-- Sanaye -->
                         <img class="shadow-lg" src="assets/img/photos/Sanaye_Lewis750x1000_72R.jpeg" width=70%>
                         <br><br>
-                        <p><i>Sanaye Lewis (In-Person Lead Administrative Mentor)</i></p>
+                        <p><i>Sanaye Lewis (In-Person Lansing Lead Administrative Mentor)</i></p>
                     </div>
                 </div>
                 <div class="row">
@@ -452,23 +452,22 @@
                     <div class="col-md-4" align="left"> <!-- Sanaye -->
                         <p>
                             <b>What are you studying?</b><br>
-                            I'm a fourth-year student majoring in Computer Science and minoring in Spanish. 
-                        </p>
+                            I'm a second-year student majoring in Computer Science and minoring in business!                        </p>
                         <p>
                             <b>How did you become interested in computer science?</b><br>
-                            I really enjoyed my AP Computer Science Class my Senior year of High School.
+                            I took AP Computer Science A in high school which I really enjoyed, and I participated in Kode With Klossy over the summer which was a lot of fun.
                         </p>
                         <p>
                             <b>What's something cool you've done with computer science?</b><br>
-                            I developed an automated-data-comparator tool during my internship at Target. 
+                            I developed an iOS app that gives users different dessert recipes based on a region of the world they choose, which can help them learn about different food around the world!
                         </p>
                         <p>
                             <b>What are you hoping to do with computer science in the future?</b><br>
-                            I hope to become a full-stack developer as well as continue spreading my passion for coding to students all over. 
+                            I hope to get more into machine learning research.
                         </p>
                         <p>
                             <b>What advice do you have for our students?</b><br>
-                            Enjoy the journey.
+                            Don't be afraid to ask questions. There is no such thing as a stupid question!
                         </p>
                     </div>
                 </div><br>
