--- a/technovation/Fall2022/contact.html
+++ b/technovation/Fall2022/contact.html
@@ -671,7 +671,7 @@
 
                                     <div class="col-md-3"> <!-- Oyendrila -->
                                         <div class="team-member-box text-center">
-                                            <img src="" class="img-responsive center-block" alt="Photo of Imen">
+                                            <img src="assets/img/photos/Oyendrila Dobe.JPG" class="img-responsive center-block" alt="Photo of Imen">
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
                                                     <h4>Oyendrila</h4>
@@ -691,7 +691,7 @@
 
                                     <div class="col-md-3"> <!-- Mikayla -->
                                         <div class="team-member-box text-center">
-                                            <img src="" class="img-responsive center-block" alt="Photo of Marilyn">
+                                            <img src="assets/img/photos/MikaylaNorton.JPG" class="img-responsive center-block" alt="Photo of Marilyn">
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
                                                     <h4>Mikayla</h4>
