--- a/technovation/past-websites.html
+++ b/technovation/past-websites.html
@@ -187,10 +187,10 @@
 
                             <div class="col-md-7">
                                 <div class="intro-description">
-                                    <h2><a href="Fall2021/index.html" target="_blank">Fall 2021</a></h2>
-                                    <h2><a href="Fall2020/index.html" target="_blank">Fall 2020</a></h2>
-                                    <h2><a href="Fall2019/index.html" target="_blank">Fall 2019</a></h2>
-                                    <h2><a href="Fall2018/index.html" target="_blank">Fall 2018</a></h2>
+                                    <h2><a href="https://msu-cse-outreach.github.io/technovation/Fall2021/index.html" target="_blank">Fall 2021</a></h2>
+                                    <h2><a href="https://msu-cse-outreach.github.io/technovation/Fall2020/index.html" target="_blank">Fall 2020</a></h2>
+                                    <h2><a href="https://msu-cse-outreach.github.io/technovation/Fall2019/index.html" target="_blank">Fall 2019</a></h2>
+                                    <h2><a href="https://msu-cse-outreach.github.io/technovation/Fall2018/index.html" target="_blank">Fall 2018</a></h2>
                                     <!--
                                     <p>
                                        Future site for web materials developed in fall 2018 for Technovation. Look here once the next club starts for archived information.
