update-ford advisor

--- a/technovation/Fall2022/contact.html
+++ b/technovation/Fall2022/contact.html
@@ -582,7 +582,7 @@
  
                                      <div class="col-md-3"> <!-- Samantha  -->
                                        <div class="team-member-box text-center">
-                                           <img src="assets/img/photos/shannon750x1000_72R.jpg" class="img-responsive center-block" alt="Photo of Shannon">
+                                           <img src="assets/img/photos/Samantha.png" class="img-responsive center-block" alt="Photo of Shannon">
                                              <div class="team-member-description">
                                                  <div class="team-member-about">
                                                      <h4>Samantha</h4>
