--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -231,9 +231,9 @@
     <section class="news bg-light-gray">  <!-- begin Week 1 section -->
         <div class="container">
             <h2>Week 1</h2>
-            <h4>Two Times the Fun</h4>
+            <h4>Three Times the Fun</h4>
             <p>
-                Saturday marked the start of not one, but <b>two</b> Technovation clubs&mdash;making for not one, but two times the fun! Thanks to generous support from <a href="https://www.ford.com/">Ford Motor Company</a> and continued funding from the <a href="https://www.egr.msu.edu/">Michigan State University College of Engineering</a>, we've expanded the scope of Technovation beyond the Greater Lansing area this fall to engage students all across the great state of Michigan.
+                Saturday marked the start of not one, not two, but <b>three</b> Technovation Cohorts&mdash;making for not one, not two, but three times the fun! Thanks to generous support from <a href="https://www.ford.com/">Ford Motor Company</a> and continued funding from the <a href="https://www.egr.msu.edu/">Michigan State University College of Engineering</a>, we've brought back the local Lansing club—our In-Person Cohort—while continuing to engage students all across the great state of Michigan in an All-Michigan club consisting of two cohorts—our Green Cohort and our White Cohort.
             </p>
             <p>
                 Before we dive into a full recap of our first meeting, we've got a few announcements to share!
@@ -245,15 +245,15 @@
             <ul>
                 <h4>1. Consent Forms</h4>
                 <p>
-                    We're still missing parental consent forms for half of our students! If you have not yet submitted a <a href="https://forms.gle/451DLGFcr7j9WNSK9">Fall 2022 Technovation Consent Form</a> for each of your students registered for Technovation, please do so as soon as possible. This is required by MSU Youth Program Policy, and should take no more than 5 minutes to complete.
+                    We're still missing parental consent forms for half of our students! If you have not yet submitted a <a href="https://forms.gle/451DLGFcr7j9WNSK9">Fall 2022 Technovation Consent Form</a> for each of your students registered for Technovation, please do so as soon as possible. This form is required by MSU Youth Program Policy, and should take no more than 5 minutes to complete.
                 </p>
                 <h4>2. Remind</h4>
                 <p>
-                    If you haven't already, subscribe to our Remind service to receive instant updates about the Fall 2022 session of Technovation! Text <b>@f21tech</b> to <b>81010</b> or follow <a href="https://www.remind.com/join/f22tech">this link</a> to subscribe. We'll continue to send weekly updates via email, but we know how full inboxes can become!
+                    If you haven't already, subscribe to our Remind service to receive instant updates about the Fall 2022 session of Technovation! Text <b>@f22tech</b> to <b>81010</b> or follow <a href="https://www.remind.com/join/f22tech">this link</a> to subscribe. We'll continue to send weekly updates via email, but we know how full inboxes can become!
                 </p>
                 <h4>3. Participant Pre-Survey</h4>
                 <p>
-                    Students were encouraged to fill out the <a href="https://forms.gle/QFYb5pM1zHu3FWdHA">In-Person Fall 2022 Technovation Participant Pre-Survey</a> and <a href="https://forms.gle/qJwdk6YgLAh9YCjv7">Virtual Fall 2022 Technovation Participant Pre-Survey</a> at Saturday's meeting, but not everyone submitted their responses. If your student has not yet completed the pre-survey, please have them do so before this Saturday's meeting.
+                    We asked students to fill out the <a href="https://forms.gle/QFYb5pM1zHu3FWdHA">In-Person Fall 2022 Technovation Participant Pre-Survey</a> and <a href="https://forms.gle/qJwdk6YgLAh9YCjv7">Virtual Fall 2022 Technovation Participant Pre-Survey</a> at Saturday's meeting, but not everyone submitted their responses. If your student has not yet completed the pre-survey, please have them do so before this Saturday's meeting.
                 </p>
                 <h4>4. Bonus Hour</h4>
                 <p>
@@ -264,12 +264,12 @@
                 </ul>
                 <h4>5. Looking Ahead</h4>
                 <p>
-                    We'll see you again this Saturday, 10/1 at 10:30a ET for our second Technovation meeting of the fall! Zoom links will be the same as those used last week&mdash;we will send them out again on Saturday morning if you've lost them. For In-Person Technovation we will see you back at The  the basement events room at the <a href="https://www.cadl.org/about/our-locations/downtown-lansing">Downtown Branch of the Capital Area District Library</a>.
+                    We'll see you again this Saturday, 10/1 at 10:30a ET for our second Technovation meeting of the fall! Zoom links will be the same as last week&mdash;we will send them out again on Saturday morning if you've lost them. For In-Person Technovation,  we will see you back in the Basement Galleries at the <a href="https://www.cadl.org/about/our-locations/downtown-lansing">Downtown Branch of the Capital Area District Library</a>.
                     Looking further ahead, we'll be meeting every Saturday through 11/19 at 10:30a ET.
                 </p>
-                <h4>6. Geographic Cohorts</h4>
+                <h4>6. Three Cohorts</h4>
                 <p>
-                    As we mentioned above, we're running two sessions of Technovation this fall&mdash;split by geographic region&mdash;in order to broaden our reach and serve students all across the state of Michigan. Content covered in each geographic cohort will be equivalent&mdash;cohorts are just for organization, and encourage student-mentor interaction by decreasing group sizes. If you're unsure of which cohort your student is in, check the subject line of the welcome email sent last week!
+                    As we mentioned above, we're running three cohorts of Technovation this fall in order to serve students all across the state of Michigan and to also offer an in-person option for those in the Lansing area. Content covered in each cohort will be equivalent&mdash;cohorts encourage student-mentor interaction by decreasing group sizes. If you're unsure which cohort your student is in, check the subject line of the welcome email sent last week.
                 </p>
                 <h4>7. Questions?</h4>
                 <p>
@@ -298,7 +298,10 @@
                 </div>
             </div>
             <p>
-                After our Club contracts, students filled the <a href="https://forms.gle/QFYb5pM1zHu3FWdHA">In-Person Fall 2022 Technovation Participant Pre-Survey</a> and <a href="https://forms.gle/qJwdk6YgLAh9YCjv7">Virtual Fall 2022 Technovation Participant Pre-Survey</a> to share their interests and prior experience with us&mdash;if your student did not submit this survey, please encourage them to do so. Students then created CodeHS accounts and began to work through the first few exercises in the <a href="https://codehs.com/course/introtracy/overview">Intro to Python with Tracy</a> course we'll be completing together in Technovation this fall. See the video below for a brief introduction to Tracy and an overview of the sort of programming our students will be learning!
+                After completing the Club contracts, we asked coders in our In-Person Cohort to fill the <a href="https://forms.gle/QFYb5pM1zHu3FWdHA">In-Person Fall 2022 Technovation Participant Pre-Survey</a> and coders in our Green and White Cohorts to fill the <a href="https://forms.gle/qJwdk6YgLAh9YCjv7">Virtual Fall 2022 Technovation Participant Pre-Survey</a>. If your student did not submit this survey because they arrived late or just ran out of time, please ask them to do so. 
+            </p>
+            <p>
+                Students then created CodeHS accounts and began to work through the first few exercises in the <a href="https://codehs.com/course/introtracy/overview">Intro to Python with Tracy</a> course. See the video below for a brief introduction to Tracy and an overview of the programming your students will be learning!
             </p>
             <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
                 <div class="row">
@@ -320,7 +323,7 @@
 
             <h4 class="text-center">Mentor Spotlight</h4>
             <p>
-                This fall, we'll be including a new section in our weekly newsletter: the Mentor/Advisor Spotlight! Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford, and we thought it would be fun to introduce a few of our team members each week.
+                The Mentor/Advisor Spotlight! Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford. The Mentor/Advisor Spotlight introduces a few of our team members each week to help coders get to know them better. Feel free to ask mentors and advisors for more information about their hobbies and past experiences during the Thursday Bonus Hour.
             </p>
             <p>
                 To kick off our spotlight series, we'd like to introduce the Fall 2022 Lead Mentors!
