final newsletter fix

--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -323,7 +323,7 @@
 
             <h4 class="text-center">Mentor Spotlight</h4>
             <p>
-                The Mentor/Advisor Spotlight! Technovation is led, organized, and run by MSU students under the guidance of faculty advisors from MSU and Ford. The Mentor/Advisor Spotlight introduces a few of our team members each week to help coders get to know them better. Feel free to ask mentors and advisors for more information about their hobbies and past experiences during the Thursday Bonus Hour.
+                The Mentor/Advisor Spotlight! Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford. The Mentor/Advisor Spotlight introduces a few of our team members each week to help coders get to know them better. Feel free to ask mentors and advisors for more information about their hobbies and past experiences during the Thursday Bonus Hour.
             </p>
             <p>
                 To kick off our spotlight series, we'd like to introduce the Fall 2022 Lead Mentors!
