update photo contacts - todo: fix image size

--- a/technovation/Fall2022/contact.html
+++ b/technovation/Fall2022/contact.html
@@ -690,7 +690,7 @@
 
                                     <div class="col-md-3"> <!-- Yann-Meing Law -->
                                         <div class="team-member-box text-center">
-                                            <img src="" class="img-responsive center-block" alt="Photo of Yolanda">
+                                            <img src="assets/img/photos/website_Yann-Meing_Law.JPG" class="img-responsive center-block" alt="Photo of Yolanda">
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
                                                     <h4>Dr. Law</h4>
