--- a/technovation/Fall2022/news.html
+++ b/technovation/Fall2022/news.html
@@ -226,7 +226,224 @@
     -->
 
     
-    
+    <section class="news bg-white">  <!-- begin Week 2 section -->
+        <div class="container">
+            <h2>Week 2</h2>
+            <h4>Variables, inputs, and colors!</h4>
+            <p>
+                <b>Virtual Technovation</b> and <b>In-Person Technovation</b> had a lot of fun learning about variables and inputs. Our students and mentors explored the possibilities of colors and how you can use certain commands to add creativity to your code through the lesson.
+            </p>
+            <p>
+                Before we dive into a full recap of our meeting, we've got a few key announcements to share.
+            </p>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Announcements</h4>
+            <ul>
+                <h4>1. Consent Forms</h4>
+                <p>
+                    We're still missing parental consent forms for half of our students! If you have not yet submitted a <a href="https://forms.gle/451DLGFcr7j9WNSK9">Fall 2022 Technovation Consent Form</a> for each of your students registered for Technovation, please do so as soon as possible. This is required by MSU Youth Program Policy.
+                </p>
+                <h4>2. Bonus Hour</h4>
+                <p>
+                    We were so pleased to see some coders in bonus hours last week! As a reminder, we'll be continuing to host this Bonus Hour every Thursday from 7-8p ET, and invite all Technovation participants to join us. At least two Technovation mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the coding concepts we've learned, or to talk about computer science in general! Join us at the link below:
+                </p>
+                <ul>
+                    <li style="list-style: disc">Bonus Hour Zoom: <a href=" https://msu.zoom.us/j/92645747814">zoom</a> (password: see email)</li>
+                </ul>
+                <h4>3. Looking Ahead</h4>
+                <p>
+                    We'll see you again this Saturday, 10/8 at 10:30a ET for our third Technovation meeting of the fall! Zoom links will be the same as those used last week&mdash;we will send them out again on Saturday morning if you've lost them. Looking further ahead, we'll be meeting every Saturday through 11/19 at 10:30a ET.
+                </p>
+                <h4>4. Questions?</h4>
+                <p>
+                    As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                </p>
+            </ul>
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Meeting Recap</h4>
+            <p>
+                Students kicked off this week by getting to know each other and their mentors with a name-sharing icebreaker. Students got the chance to introduce themselves to some of the mentors and classmates while simultaneously trying to remember everyone else's name in their group.
+            </p>
+            <p>
+                After the students got to know each other and their mentors, Saturday's lesson began with an uplifting spotlight video from Khan Academy. Introducing the definition of a growth mindset and how it differs from a fixed mindset, the spotlight underscored the importance of bringing a growth mindset to Technovation every week. Learning to code is difficult, but the challenges we overcome as we navigate this learning process will ultimately make us stronger&mdash;we simply need to change the way we see failure! If we view it as an opportunity for improvement instead of a setback, we'll go far&mdash;if we're feeling down, we simply need to turn our frown upside-down and remember that all experiences are learning experiences!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-12" align="middle">
+                        <iframe width="728" height="548" src="https://www.youtube.com/embed/rf8FX2sI3gU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>Bringing a growth mindset to Technovation each week is key! Ask your student what a growth mindset means to them, and how they can apply it elsewhere in their life.</i></p>
+                </div>
+            </div>
+            <p>
+                Next, we jumped into our coding lesson for the week. This week students learned how to change the color of Tracy's pen with the color pen and fill in the shapes they had drawn with the begin_fill and end_fill commands. Students also learned how to increase the trail Tracy leaves with the pensize command, reposition Tracy with the setposition command, and change the speed Tracy draws at with the speed command. 
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week2/leftright.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week2/square.png" width=90%>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>Once students learned how to tell Tracy to turn left and right, they were able to instruct Tracy to draw a square!</i></p>
+                </div>
+            </div>
+            <p>
+                We followed this exercise with an introduction to loops, the programming structure we mentioned earlier which tells a computer to repeat a set of instructions over, and over, and over, and over, ..., and over. As students learned, loops bring two major advantages: they shorten our code, and make it easier to alter our code later on!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week2/loop1.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week2/loop2.png" width=90%>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>Going in circles isn't always a bad thing... that's exactly what loops are designed to do!</i></p>
+                </div>
+            </div>
+            <p>
+                Finally, we learned how to use the setposition and speed commands to fine-tune Tracy's behavior: setposition allows Tracy to jump around across our screen, while speed allows Tracy to move faster or slower! Ask your student to show you these commands in action&mdash;they're pretty cool!
+            </p>
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week2/setposition.png" width=90%>
+                    </div>
+                    <div class="col-md-6" align="middle">
+                        <img class="shadow-lg" src="assets/img/week2/speed.png" width=90%>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <p><i>With the setposition command, Tracy's only a hop, skip, and a jump away from anywhere on the screen... and with the speed command, she can get there in a flash!</i></p>
+                </div>
+            </div>
+            <p>
+                As usual, students concluded Saturday's meeting with a brief reflection and discussion around what went well, what didn't go so well, and what excites them about the week ahead. We hope they're as excited as we are for Week 3!
+            </p>
+
+
+            <!------------------------------------------>
+
+            <h4 class="text-center">Mentor Spotlight</h4>
+            <p>
+                Technovation is led, organized, and run by MSU students under the guidance of advisors from MSU and Ford.&mdash;this week, we'd like to introduce mentors Sophia Wicks, Jose Hernández, and Sneha Sarkar!
+            </p>
+
+            <!------------------------------------------>
+
+            <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                <div class="row">
+                    <div class="col-md-4" align="middle"> <!-- Sophia -->
+                        <img class="shadow-lg" src="assets/img/photos/AnnaClark750x1000.jpg" width=70%>
+                        <br><br>
+                        <p><i>Anna Clark (Detroit Mentor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Jose -->
+                        <img class="shadow-lg" src="assets/img/photos/JoseNew750x1000.jpg" width=70%>
+                        <br><br>
+                        <p><i>Jose Hernández (Lansing Mentor)</i></p>
+                    </div>
+                    <div class="col-md-4" align="middle"> <!-- Sneha -->
+                        <img class="shadow-lg" src="assets/img/photos/SnehaSarkar750x1000_72R.jpeg" width=70%>
+                        <br><br>
+                        <p><i>Sneha Sarkar (All Michigan Mentor)</i></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4" align="left"> <!-- Anna -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a second-year student majoring in Mathematics and Computational Data Science!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I became interested in computer science through my robotics team!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I've coded a game of solitaire in Python!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I hope to teach others!
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Practice makes perfect; don't give up quickly!
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Jose -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a PhD student with a dual concentration in Computer Science and Ecology, Evolution, & Behavior!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I took a quiz in middle school to discover potential majors and got computer science!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I used code to create an app to play tag!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            In the future, I hope to use code to conduct research on different topics in machine learning!
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Remember to make time to do things that make you happy!
+                        </p>
+                    </div>
+                    <div class="col-md-4" align="left"> <!-- Sneha -->
+                        <p>
+                            <b>What are you studying?</b><br>
+                            I'm a fourth-year student majoring in Computer Science with a minor in Graphic Design!
+                        </p>
+                        <p>
+                            <b>How did you become interested in computer science?</b><br>
+                            I wanted to become an animator, which led me to computer science!
+                        </p>
+                        <p>
+                            <b>What's something cool you've done with computer science?</b><br>
+                            I am a part of a research group where we make use of robots as caregivers to dementia patients!
+                        </p>
+                        <p>
+                            <b>What are you hoping to do with computer science in the future?</b><br>
+                            I am hoping to use computer science to build assistive technology and be part of research groups that do the same. 
+                        </p>
+                        <p>
+                            <b>What advice do you have for our students?</b><br>
+                            Challenge yourself one step at a time!
+                        </p>
+                    </div>
+                </div><br>
+            </div>
+            <p>
+                Have an energizing week!
+            </p>
+            <p>
+                -The Technovation Team
+            </p>
+        </div>
+
+        </div>
+    </section> <!-- end Week 2 section -->
 
     <section class="news bg-light-gray">  <!-- begin Week 1 section -->
         <div class="container">
@@ -260,7 +477,7 @@
                     Back by popular demand, we'll be hosting a Technovation "bonus hour" every Thursday from 7-8p ET (beginning this Thursday, 9/29) open to all Technovation participants. At least two Technovation mentors will be available on Zoom during the bonus hour to resolve technical difficulties, dive deeper into the coding concepts we've learned, or to talk about computer science in general! Join us at the link below:
                 </p>
                 <ul>
-                    <li style="list-style: disc">Bonus Hour Zoom: <a href="https://msu.zoom.us/j/92645747814">https://msu.zoom.us/j/92645747814</a> (password: see email)</li>
+                    <li style="list-style: disc">Bonus Hour Zoom: <a href="https://msu.zoom.us/j/92645747814">zoom</a> (password: see email)</li>
                 </ul>
                 <h4>5. Looking Ahead</h4>
                 <p>
